# Project_MPPR-AI_B_PHM_America_2024

./: .gitignore  pyproject.toml
config/dataset/: dataset_config.yml
config/pipeline/: classification_old_pipeline_config.yml  classification_pipeline_config.yml
configs/datasets/: dataset_config.yml
configs/pipelines/: classification_pipeline_config.yml  clustering_pipeline_config.yml  regression_pipeline_config.yml  timeseries_pipeline_config.yml
notebooks/: classification_model_notebook.ipynb  regression_model_notebook.ipynb  test_class.ipynb  test_loader.ipynb  test_logging.ipynb  test_model_class.ipynb  test_model_class_stage_2.ipynb  test_model_class_stage_3.ipynb  test_read_data.ipynb
src/phm_america_2024/config/: build_factory_1_config.py  enums_utils_1_config.py  load_loader_1_config.py  load_loader_config.py  schema_dto_1_config.py  validate_validator_1_config.py
src/phm_america_2024/core/: helpers_utils_core.py  logging_utils_core.py  resolve_path_utils_core.py  seeds_utils_core.py
src/phm_america_2024/data/: load_utils_data.py  quality_rules_utils_data.py
src/phm_america_2024/features/: selection_service_features.py  split_service_features.py  transforms_service_features.py
src/phm_america_2024/interpretation/: explain_service_interpretation.py
src/phm_america_2024/models/: evaluate_service_models.py  model_registry_models.py  train_service_models.py
src/phm_america_2024/pipelines/: classification_runner_pipelines.py  pipeline_context.py
src/phm_america_2024/reporting/: artifacts_service_reporting.py  plots_utils_reporting.py  (+1 more)
(+4 files in other folders)
