[project]
name = "project-manutenzione_preventiva_per_la_robotica_e_la_automazione_intelligente"
version = "0.1.0"
description = "..."
authors = [
    {name = "Catalinaqi",email = "ccequispe@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "xgboost (>=3.1.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false
